@@ -4,6 +4,7 @@ Update FAQ about narratives
 Add wrappers for remaining elements
 Display country-budget-items
 Display other identifier
+Display description for sector vocab
 
 
 Development Portal (2020-02-06 shi)
